apps/portfolio/backend-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend-dev
  namespace: portfolio-dev
spec:
  selector:
    app.kubernetes.io/name: portfolio-backend-dev
  ports:
    - name: http
      port: 80
      targetPort: http
